tests/tools/trip/randomTrips/errors/unknown_option/errors.tools
usage: randomTrips.py [-h] [-c FILE] [-C FILE] [--save-template FILE] -n
                      NETFILE [-a ADDITIONAL] [--weights-prefix WEIGHTSPREFIX]
                      [-o TRIPFILE] [-r ROUTEFILE] [--vtype-output VTYPEOUT]
                      [--weights-output-prefix WEIGHTS_OUTPREFIX]
                      [--pedestrians] [--personrides PERSONRIDES]
                      [--persontrips]
                      [--persontrip.transfer.car-walk CARWALKMODE]
                      [--persontrip.walkfactor FLOAT]
                      [--persontrip.walk-opposite-factor FLOAT]
                      [--from-stops FROMSTOPS] [--to-stops TOSTOPS]
                      [--prefix TRIPPREFIX] [-t TRIPATTRS]
                      [--fringe-start-attributes FRINGEATTRS]
                      [--vehicle-class VEHICLE_CLASS] [--random-departpos]
                      [--random-arrivalpos] [--junction-taz] [-l] [-L]
                      [--edge-param EDGEPARAM] [--speed-exponent FLOAT]
                      [--fringe-speed-exponent FLOAT] [--angle ANGLE]
                      [--angle-factor ANGLE_WEIGHT]
                      [--random-factor RANDOMFACTOR]
                      [--fringe-factor FRINGE_FACTOR]
                      [--fringe-threshold FRINGE_THRESHOLD] [--allow-fringe]
                      [--allow-fringe.min-length ALLOW_FRINGE_MIN_LENGTH]
                      [--fringe-junctions] [--vclass VCLASS]
                      [--via-edge-types VIAEDGETYPES] [--allow-roundabouts]
                      [-s SEED] [--random] [--min-distance FLOAT]
                      [--min-distance.fringe FLOAT] [--max-distance FLOAT]
                      [-i INTERMEDIATE] [--jtrrouter] [--maxtries MAXTRIES]
                      [--remove-loops]
                      [--random-routing-factor RANDOMROUTINGFACTOR]
                      [--validate] [-v] [-b BEGIN] [-e END]
                      [-p FLOAT [FLOAT ...] | --insertion-rate FLOAT
                      [FLOAT ...] | --insertion-density FLOAT [FLOAT ...]]
                      [--flows FLOWS] [--random-depart] [--binomial N]
randomTrips.py: error: unrecognized arguments: --foo
